discussion/kv_engine/154756/154756_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

toybuild: Do blind write for initial disk snapshot

Since all items within this initial disk snapshot will be unique.

Change-Id: I6855ba10dcf5df8b7ab75bd8a503f0c8f773296d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2021-05-31 19:07:53.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Rohan Suri
Date: 2021-05-31 19:08:16.000000000
Message: 
Patch Set 2:

corresponding magma patch http://review.couchbase.org/c/magma/+/154755
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-31 19:17:01.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30926/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1284:36:
error: too many arguments to function call, expected at most 5, have 6
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30926/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9294/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1284:36: error: too many arguments to function call, expected at most 5, have 6 [clang-diagnostic-error]
                                   commitData.blindWrite);
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:358:5: note: "WriteDocs" declared here
    Status WriteDocs(const KVStoreID kvID,
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9294/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1284:36:
error: too many arguments to function call, expected at most 5, have 6 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9294/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36210/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(1279): error C2660: "magma::Magma::WriteDocs": function does not take 6 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36210/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9915/ : FAILURE

Compile error at [2021-05-31T19:08:59.636Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1284:36:
error: too many arguments to function call, expected at most 5, have 6
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9915/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11254/ : FAILURE

Compile error at [2021-05-31T19:12:41.716Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1284:36:
error: too many arguments to function call, expected at most 5, have 6
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11254/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10991/ : FAILURE

Compile error at [2021-05-31T19:09:04.705Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1284:57:
error: no matching function for call to ?magma::Magma::WriteDocs(Vbid::id_type, MagmaKVStore::WriteOps&, __gnu_cxx::__alloc_traits<std::allocator<Monotonic<long unsigned int> >, Monotonic<long unsigned int> >::value_type&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(const magma::Magma::WriteOperation&, bool, magma::Slice)>&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(MagmaKVStore::WriteOps&)>&, bool&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10991/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10845/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">3 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10845/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18829/ : FAILURE

Compile error at [2021-05-31T19:09:06.560Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1284:36:
error: too many arguments to function call, expected at most 5, have 6
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18829/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7876/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
